Day - 03 -- Grid system align fixed in row

--- a/task/assets/sass/layout/_grid.scss
+++ b/task/assets/sass/layout/_grid.scss
@@ -10,6 +10,7 @@ $breakpoints: (
 .row{
   display:flex;
   flex-wrap: wrap;
+  align-items:center;
 }
 
 .container{
